syntax = "proto3";

import "base.proto";

service MiningCampService {
    rpc ListenCreation (Empty) returns (stream MiningCampState);
    rpc ListenState(ID) returns (stream MiningCampState);

    rpc FreeWorker(FreeWorkerRequest) returns (Empty);
}

message FreeWorkerRequest {
    ID CampID = 1;
}

message MiningCampState {
    BuildingState Base = 1;
    float MiningSpeed = 2;
    int32 WorkerCount = 3;
}