syntax = "proto3";

import "base.proto";

service TurretService {
    rpc ListenCreation (Empty) returns (stream TurretState);
    rpc ListenState(ID) returns (stream TurretState);

    rpc CancelBuilding(CancelBuildingRequest) returns (Empty);

    rpc Attack(AttackRequest) returns (Empty);
    rpc Stop(StopRequest) returns (Empty);
}

message TurretState {
    BuildingState Base = 1;
    bool IsAttacks = 2;
    float AttackRange = 3;
    float AttackSpeed = 4;
	int32 Damage = 5;
    Vector Direction = 6;
}